--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alura Plus</title>
-        <link rel="stylesheet" href="/Projeto Alura/style.css">
+        <link rel="stylesheet" href="/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;@700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
             <div class="container__caixa">
                 <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
 
-                <img class="container__imagem" src="/Projeto Alura/img/Combo.png" alt="O combo+ é a junção do Alura+ e o Alura Língua">
+                <img class="container__imagem" src="/img/Combo.png" alt="O combo+ é a junção do Alura+ e o Alura Língua">
 
                 <a href="https://alura.com.br" class="container__botao">Assine por 12x de R$120,00*</a>
                 <a href="https//alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
@@ -24,7 +24,7 @@
         </section>
 
         <section class="container secundario">
-            <img class="secundario__imagem" src="/Projeto Alura/img/Plataformas.png" alt="plataformas disponiveis">
+            <img class="secundario__imagem" src="/img/Plataformas.png" alt="plataformas disponiveis">
             <div class="container__descricao">
                 <h2 class="descricao__titulo">Assista do seu jeito</h2>
                 <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
@@ -38,11 +38,11 @@
                 </p>
                 <a href="https://alura.com.br" class="container__botao secundario__botao">Assinar o Combo+</a>
             </div>
-            <img src="/Projeto Alura/img/Telas.png" alt="telas" class="secundario__imagem">
+            <img src="/img/Telas.png" alt="telas" class="secundario__imagem">
         </section>
 
         <section class="container secundario">
-            <img src="/Projeto Alura/img/Notebook.png" alt="Imagem Notebook" class="secundario__imagem">
+            <img src="/img/Notebook.png" alt="Imagem Notebook" class="secundario__imagem">
             <div class="container__descricao">
                 <h2 class="descricao__titulo">Baixe seus cursos</h2>
                 <p class="descricao__texto">
@@ -55,22 +55,22 @@
             <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
             <ul class="dispositivos__lista">
                 <li>
-                    <img src="/Projeto Alura/img/tv.png" alt="Imagem Tv">
+                    <img src="/img/tv.png" alt="Imagem Tv">
                     <h3 class="lista__item">Tv</h3>
                 </li>
                 <li>
-                    <img src="/Projeto Alura/img/computador.png" alt="Imagem Computador">
+                    <img src="/img/computador.png" alt="Imagem Computador">
                     <h3 class="lista__item">Computadores</h3>
                 </li>
                 <li>
-                    <img src="/Projeto Alura/img/celular.png" alt="Imagem Celular">
+                    <img src="/img/celular.png" alt="Imagem Celular">
                     <h3 class="lista__item">Celulares e Tablets</h3>
                 </li>
             </ul>
         </section>
     </body>
     <footer>
-        <img src="/Projeto Alura/img/Logo.png" class="rodape" alt="Logo Alura">
+        <img src="/img/Logo.png" class="rodape" alt="Logo Alura">
         <ul class="rodape__lista">
             <li class="lista__link">
                 <a href="#">Idiomas</a>
